start button disapears once is clicked

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
 
       <div id="quiz"> </div>  
-      <button id="answers" type="button" class="btn btn-primary btn-lg"> START!</button>
+      <button id="startButton" type="button" class="btn btn-primary btn-lg"> START!</button>
       <ul id="answ"></ul>
         <!-- Content here -->
     </div>
