added an event listener to my answers/choices buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <button id="choiceD" type="button"  class="button"></button>
         </div>
 
-      <ul id="answ"></ul>
+      <h3 id="answ"></h3>
         <!-- Content here -->
     </div>
    
