timer decreases ten seconds if you answer a question wrong

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <header>
       <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Code Quiz</span>
-        <div>Time Left <span id="time">01:00</span> minutes!</div>
+        <div>Time Left <span id="time">01:00</span> seconds!</div>
       </nav>
+      <a href="highscores.html">High Scores!</a>
     </header>
-      
+   
     <div class="container">
     <div class="row">
     <div class="col-md-12">
+    
 
         <div class="jumbotron">
             <!-- <h1 class="display-4">Hello, world!</h1> -->
@@ -44,7 +46,7 @@
                     </div>
                 <br>
                     <div>
-                        <button id="choiceD" type="button"  class="buttonbtn btn-info btn-lg btn-block"></button>
+                        <button id="choiceD" type="button"  class="button btn btn-info btn-lg btn-block"></button>
                     </div>
                 <br> 
                   <h3 id="answ"></h3>
