adding prompts for answers right and wrong

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                         <button id="choiceD" type="button"  class="button btn btn-info btn-lg btn-block"></button>
                     </div>
                 <br> 
-                  <h3 id="answ"></h3>
 
                   <a id="startButton" class="btn btn-primary btn-lg" href="#" role="button">Start!</a>
                     <!-- Content here -->
@@ -59,8 +58,8 @@
             <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
             
           </div>
-
-      <div id="quiz"> </div>  
+          <h3 id="answ"></h3>
+      <div id="quiz" style="display:none"; > YOU ARE RIGHT!</div>  
     
 
     <!-- Optional JavaScript -->
