--- a/highscores.html
+++ b/highscores.html
@@ -14,17 +14,24 @@
     <header>
       <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Code Quiz</span>
-        <div>Time Left <span id="time">01:00</span> minutes!</div>
+        <!-- <div>Time Left <span id="time">01:00</span> minutes!</div> -->
       </nav>
+      <a href="index.html">Back to Quiz!</a>
     </header>
       
     <div class="container">
 
       <div id="quiz"> </div>  
-      
+      <div class="jumbotron">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Clear Score</a>
+      </div>
 
     <!-- Optional JavaScript -->
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
