--- a/highscores.html
+++ b/highscores.html
@@ -23,10 +23,12 @@
 
       <div id="quiz"> </div>  
       <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1 class="display-4">Score Board</h1>
+        <p class="lead"> </p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <ul id="usersHs">
+
+        </ul>
         <a class="btn btn-primary btn-lg" href="#" role="button">Clear Score</a>
       </div>
 
