clear score button fixed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- <h1 class="display-4">Hello, world!</h1> -->
             <p class="lead" id="questionPrompt" class="question-prompt"> </p>
             <hr class="my-4">
-           <p id="userdisplay"></p>
+           <a href="highscores.html" id="userdisplay"> Wanna see your score?</a>
             <div id= "quizBox" class="box">
                 <br>
                     <div id="questionPrompt" class="question-prompt"></div>
