--- a/highscores.html
+++ b/highscores.html
@@ -29,7 +29,7 @@
         <ul id="usersHs">
 
         </ul>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Clear Score</a>
+        <a class="btn btn-primary btn-lg" id="clear" href="#" role="button">Clear Score</a>
       </div>
 
     <!-- Optional JavaScript -->
